force-app/main/default/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c/Apttus_Config2__OrderPocketAdjustmentLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents a pocket price adjustment to the price of a product/service</description>
    <label>Order Pocket Adjustment Line Item</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Pocket Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>