force-app/main/default/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c/fields/Apttus_Config2__AdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentReason__c</fullName>
    <description>The adjustment reason</description>
    <inlineHelpText>The adjustment reason</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>