force-app/main/default/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c/fields/Apttus_Config2__LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineItemId__c</fullName>
    <description>ID of the associated order line item</description>
    <inlineHelpText>ID of the associated order line item</inlineHelpText>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>Pocket Adjustment Line Items</relationshipLabel>
    <relationshipName>PocketAdjustmentLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>