force-app/main/default/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c/fields/Apttus_Config2__LineType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineType__c</fullName>
    <description>The line type</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>