force-app/main/default/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c/fields/Apttus_Config2__PriceRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the adjustment rule</description>
    <inlineHelpText>ID of the adjustment rule</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
    <relationshipLabel>Order Pocket Adjustment Line Items</relationshipLabel>
    <relationshipName>OrderPocketAdjustmentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>